--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 </nav>
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a data-scroll-nav='1' href="#">Make an Infaq</a>
+                                        <a data-scroll-nav='1' href="#">Infaq</a>
                                     </div>
                                 </div>
                             </div>
@@ -201,7 +201,7 @@
                         <p class="para_2">Gotong royong ini dilakukan dengan bantuan beberapa warga di desa Sengkerang dan anggota majelis ta'lim yang aktif mengikuti kajian setiap hari rabu dan malam kamis yang dipimpin langsung oleh Ust. Kusmayadi selaku pimpinan pondok pesantren Syifaul Qulub</p>
                         <p class="para_2">Pembangunan Pondok Pesantren Syifaul Qulub masih terus dilakukan, saat ini telah berdiri satu masjid sebagai tempat kegiatan mengaji dan menghafal para santri, kemudian ada bangunan asrama untuk laki-laki, dan kamar mandi dan tempat wudhu untuk santri putra.</p>
                         <p class="para_2">Saat ini sedang direncanakan untuk pembangunan asrama putri, lahan seluas 8 are sudah disiapkan. InsyaAllah Ta'ala setelah dana siap pembangunan akan langsung dilakukan.</p>
-                        <a href="#" data-scroll-nav='1' class="boxed-btn4">Donate Now</a>
+                        <a href="#" data-scroll-nav='1' class="boxed-btn4">Give Your Best Infaq</a>
                     </div>
                 </div>
             </div>
@@ -570,7 +570,7 @@
         <div class="footer_top">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-3 col-md-6 col-lg-4 ">
+                    <div class="col-xl-3 col-md-6 col-lg-12">
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="#">
@@ -595,7 +595,7 @@
 
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6 col-lg-8">
+                    <div class="col-xl-3 col-md-6 col-lg-12">
                         <div class="footer_widget">
                             <h3 class="footer_title">
                                 Contact
@@ -608,13 +608,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-md-6 col-lg-3">
+                    <div class="col-xl-6 col-md-12 col-lg-12">
                         <div class="footer_widget">
                             <h3 class="footer_title">
                                 Location
                             </h3>
                             <div class="news_links">
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63092.94645306157!2d116.35307635341651!3d-8.75695534241219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dcdadb9f4d07b29%3A0x9c66599b0d99176c!2sYayasan%20Syifaul%20Qulub%20Sengkerang!5e0!3m2!1sen!2sid!4v1714735394846!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63092.94645306157!2d116.35307635341651!3d-8.75695534241219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dcdadb9f4d07b29%3A0x9c66599b0d99176c!2sYayasan%20Syifaul%20Qulub%20Sengkerang!5e0!3m2!1sen!2sid!4v1714735394846!5m2!1sen!2sid" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                               </div>
                         </div>
                     </div>
