--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center mb-55">
-                        <h3><span>Gallery - Making Road Way</span></h3>
+                        <h3><span>Gallery Activities</span></h3>
                     </div>
                 </div>
             </div>
@@ -137,45 +137,39 @@
                                 <img src="img/help/gotong-royong1.JPG" alt="">
                             </div>
                         </div>
-                        <!-- <div class="help_content">
-                            <h4>Collecting Fund</h4>
-                            <p>Lorem ipsum, or lipsum as it is 
-                                sometimes known, is dummy 
-                                text used in laying out print.</p>
-                            <a href="#" class="read_more">Read More</a>
-                        </div> -->
+                        <div class="help_content">
+                            <h4>Paving The Road</h4>
+                            <p>Everybody are helping for creating a road access.</p>
+                            <a href="https://photos.app.goo.gl/Ah2P7juMXJpR5qHU8" target="_blank" class="read_more">See Gallery</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_reson">
                         <div class="thum">
                             <div class="thum_1">
-                                <img src="img/help/gotong-royong2.JPG" alt="">
+                                <img src="img/news/student-activity.jpeg" alt="">
                             </div>
                         </div>
-                        <!-- <div class="help_content">
-                            <h4>Blood Camp</h4>
-                            <p>Lorem ipsum, or lipsum as it is 
-                                sometimes known, is dummy 
-                                text used in laying out print.</p>
-                            <a href="#" class="read_more">Read More</a>
-                        </div> -->
+                        <div class="help_content">
+                            <h4>Student Zord</h4>
+                            <p>The zord is intended to send student make da'wah arround the world</p>
+                            <a href="https://photos.app.goo.gl/2empHGcpMs9zcCSr6" target="_blank" class="read_more">See Gallery</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_reson">
                         <div class="thum">
                             <div class="thum_1">
-                                <img src="img/help/gotong-royong3.JPG" alt="">
+                                <img src="img/news/kajian-malam-kamis.jpeg" alt="">
                             </div>
                         </div>
-                        <!-- <div class="help_content">
-                            <h4>Friendly Volunteer</h4>
-                            <p>Lorem ipsum, or lipsum as it is 
-                                sometimes known, is dummy 
-                                text used in laying out print.</p>
-                            <a href="#" class="read_more">Read More</a>
-                        </div> -->
+                        <div class="help_content">
+                            <h4>Nigtly Muzakarah</h4>
+                            <p>This muzakarah we disscuss about islamic eschatology, tauhid, tasawuf</p>
+                            <a href="https://photos.app.goo.gl/1MDcnDwqeUVEkjAE6" target="_blank" class="read_more">See Gallery</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -614,8 +608,8 @@
                                 Location
                             </h3>
                             <div class="news_links">
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63092.94645306157!2d116.35307635341651!3d-8.75695534241219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dcdadb9f4d07b29%3A0x9c66599b0d99176c!2sYayasan%20Syifaul%20Qulub%20Sengkerang!5e0!3m2!1sen!2sid!4v1714735394846!5m2!1sen!2sid" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                              </div>
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d426.18537209067495!2d116.37241122651783!3d-8.76002985942318!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dcdadb9f4d07b29%3A0x9c66599b0d99176c!2sYayasan%20Syifaul%20Qulub%20Sengkerang!5e1!3m2!1sen!2sid!4v1714796999546!5m2!1sen!2sid" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
