--- a/index.html
+++ b/index.html
@@ -119,6 +119,56 @@
     </div>
     <!-- slider_area_end -->
 
+    <!-- news__area_start  -->
+    <div class="news__area section_padding">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-lg-6">
+                  <div class="section_title text-center mb-55">
+                      <h3><span>Latest Mudzakarah</span></h3>
+                  </div>
+              </div>
+          </div>
+          <div class="row justify-content-center">
+              <div class="col-lg-6">
+                  <div>
+                      <div class="single__blog d-flex align-items-center">
+                          <div class="thum">
+                              <img src="img/news/thumbnail-kajian.png" alt="">
+                          </div>
+                          <div class="newsinfo">
+                              <span>May 04, 2024</span>
+                              <a href="https://www.youtube.com/watch?v=O3z1nukYHb4" target="_blank">
+                                  <h3>Tafseer As-Showi</h3>
+                              </a>
+                              <p>Tafseer As-Showi Surah Al-Baqarah, We elaborate more on the topic of hidayah and some causes that prevent hidayah enters into heart</p>
+                              <a class="read_more" href="https://www.youtube.com/watch?v=O3z1nukYHb4" target="_blank">Watch Video</a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-6">
+                <div>
+                    <div class="single__blog d-flex align-items-center">
+                        <div class="thum">
+                            <img src="img/news/thumbnail-kajian-tafsir-alqadr.png" alt="">
+                        </div>
+                        <div class="newsinfo">
+                            <span>May 10, 2021</span>
+                            <a href="https://www.youtube.com/watch?v=UVier-x-EHE" target="_blank">
+                                <h3>Tafseer As-Showi</h3>
+                            </a>
+                            <p>Tafseer As-Showi Surah Al-Qadr, on the event of the descendant of the Qur'an we discuss one important chapter of the Qur'an</p>
+                            <a class="read_more" href="https://www.youtube.com/watch?v=UVier-x-EHE" target="_blank">Watch Video</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+      </div>
+  </div>
+  <!-- news__area_end  -->
+
     <!-- reson_area_start  -->
     <div class="reson_area section_padding">
         <div class="container">
@@ -166,7 +216,7 @@
                             </div>
                         </div>
                         <div class="help_content">
-                            <h4>Nigtly Muzakarah</h4>
+                            <h4>Nightly Mudzakarah</h4>
                             <p>This muzakarah we disscuss about islamic eschatology, tauhid, tasawuf</p>
                             <a href="https://photos.app.goo.gl/1MDcnDwqeUVEkjAE6" target="_blank" class="read_more">See Gallery</a>
                         </div>
@@ -480,60 +530,6 @@
         </div>
     </div> -->
     <!-- our_volunteer_area_end  -->
-
-    <!-- news__area_start  -->
-    <!-- <div class="news__area section_padding">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="section_title text-center mb-55">
-                        <h3><span>News & Updates</span></h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="news_active owl-carousel">
-                        <div class="single__blog d-flex align-items-center">
-                            <div class="thum">
-                                <img src="img/news/1.png" alt="">
-                            </div>
-                            <div class="newsinfo">
-                                <span>July 18, 2019</span>
-                                <a href="single-blog.html">
-                                    <h3>Pure Water Is More 
-                                        Essential</h3>
-                                </a>
-                                <p>The passage experienced a 
-                                    surge in popularity during the 
-                                    1960s when used it on their  
-                                    sheets, and again.</p>
-                                <a class="read_more" href="single-blog.html">Read More</a>
-                            </div>
-                        </div>
-                        <div class="single__blog d-flex align-items-center">
-                            <div class="thum">
-                                <img src="img/news/2.png" alt="">
-                            </div>
-                            <div class="newsinfo">
-                                <span>July 18, 2019</span>
-                                <a href="single-blog.html">
-                                    <h3>Pure Water Is More 
-                                        Essential</h3>
-                                </a>
-                                <p>The passage experienced a 
-                                    surge in popularity during the 
-                                    1960s when used it on their  
-                                    sheets, and again.</p>
-                                <a class="read_more" href="single-blog.html">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- news__area_end  -->
 
     <div data-scroll-index='1' class="make_donation_area section_padding">
         <div class="container">
