--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
               <div class="newsinfo">
                 <span>May 31, 2024</span>
                 <a href="https://www.youtube.com/watch?v=ukfnd7ocuPE" target="_blank">
-                  <h3>Tafseer As-Showi Surah Al-Baqarah Ayat 11</h3>
+                  <h3>Tafseer Surah Al-Baqarah Ayat 11</h3>
                 </a>
-                <p>In this chapter we learn about the type of people that ignore advices and stubborn that think they doing the right thing while it's not</p>
+                <p>In this chapter we learn about the type of people that were told to not commit <i>Fasaad</i> (by kufr and preventing people for being believer) but were thinking doing the right thing (<i>Mushlih</i>) while they were not</p>
                 <a class="read_more" href="https://www.youtube.com/watch?v=ukfnd7ocuPE" target="_blank">Watch Video</a>
               </div>
             </div>
