modify mudzakarah description to equalize leveling between contents

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
               <div class="newsinfo">
                 <span>May 31, 2024</span>
                 <a href="https://www.youtube.com/watch?v=ukfnd7ocuPE" target="_blank">
-                  <h3>Tafseer Surah Al-Baqarah Ayat 11</h3>
+                  <h3>Tafseer As-Showi Surah Al-Baqarah Ayat 11</h3>
                 </a>
-                <p>In this chapter we learn about the type of people that were told to not commit <i>Fasaad</i> (by kufr and preventing people for being believer) but were thinking doing the right thing (<i>Mushlih</i>) while they were not</p>
+                <p>In this chapter we learn about type of people that were told to not commit <i>Fasaad</i> (by kufr and preventing people for being believer) but were thinking doing the right thing while they were not</p>
                 <a class="read_more" href="https://www.youtube.com/watch?v=ukfnd7ocuPE" target="_blank">Watch Video</a>
               </div>
             </div>
@@ -167,9 +167,9 @@
               <div class="newsinfo">
                 <span>May 04, 2024</span>
                 <a href="https://www.youtube.com/watch?v=O3z1nukYHb4" target="_blank">
-                  <h3>Tafseer As-Showi</h3>
+                  <h3>Tafseer As-Showi Surah Al-Baqarah Ayat 1</h3>
                 </a>
-                <p>Tafseer As-Showi Surah Al-Baqarah, We elaborate more on the topic of hidayah and some causes that
+                <p>We learn what are the signs of <i>Muttaqiin</i> that Allah Will Guide through the Holy Quran and we elaborate more on the topic of hidayah and some causes that
                   prevent hidayah enters into heart</p>
                 <a class="read_more" href="https://www.youtube.com/watch?v=O3z1nukYHb4" target="_blank">Watch Video</a>
               </div>
