--- a/index.html
+++ b/index.html
@@ -145,6 +145,23 @@
           <div>
             <div class="single__blog d-flex align-items-center">
               <div class="thum">
+                <img src="img/news/tafsir-25-27.jpg" alt="">
+              </div>
+              <div class="newsinfo">
+                <span>June 14, 2024</span>
+                <a href="https://youtu.be/_ebwrz_0qnE" target="_blank">
+                  <h3>Tafseer As-Showi Surah Al-Baqarah Ayat 25-27</h3>
+                </a>
+                <p>Here we discussed the rewards for believers who perform good deeds. And the true believers always see that all situations are comes from Allah</p>
+                <a class="read_more" href="https://youtu.be/_ebwrz_0qnE" target="_blank">Watch Video</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 bottom-spacer">
+          <div>
+            <div class="single__blog d-flex align-items-center">
+              <div class="thum">
                 <img src="img/news/tafsir-19-24.jpg" alt="">
               </div>
               <div class="newsinfo">
@@ -189,24 +206,6 @@
                 <p>We learn what are the signs of <i>Muttaqiin</i> that Allah Will Guide through the Holy Quran and we elaborate more on the topic of hidayah and some causes that
                   prevent hidayah enters into heart</p>
                 <a class="read_more" href="https://www.youtube.com/watch?v=O3z1nukYHb4" target="_blank">Watch Video</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div>
-            <div class="single__blog d-flex align-items-center">
-              <div class="thum">
-                <img src="img/news/thumbnail-kajian-tafsir-alqadr.png" alt="">
-              </div>
-              <div class="newsinfo">
-                <span>May 10, 2021</span>
-                <a href="https://www.youtube.com/watch?v=UVier-x-EHE" target="_blank">
-                  <h3>Tafseer As-Showi</h3>
-                </a>
-                <p>Tafseer As-Showi Surah Al-Qadr, on the event of the descendant of the Qur'an we discuss one important
-                  chapter of the Qur'an</p>
-                <a class="read_more" href="https://www.youtube.com/watch?v=UVier-x-EHE" target="_blank">Watch Video</a>
               </div>
             </div>
           </div>
